tests/integration/snapshots/player/integration__snapshot_player_test__full_frame_paused.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
=== Player Frame 80x27 ===
Recording: 80x24, View: 80x24
Time: 15.0/30.0s, Speed: 1.0x, Paused: true
Viewport: false, Free: false, Offset: (0,0)

--- Viewport ---
Viewport: 80x24 at offset (0, 0)
Buffer size: 80x24
---
    $ cargo test                                                                    
    running 42 tests                                                                
    $                                                                               
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
                                                                                    
--- Separator ---
────────────────────────────────────────────────────────────────────────────────
--- Progress Bar ---
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[*]──────────────────────────────── 00:15/00:30
--- Status Bar ---
 [>]  spd:1.0x | space:play m:mrk f:fre v:vpt r:rsz ?:hlp q:quit
