tests/integration/snapshots/player/integration__snapshot_player_test__help_overlay_standard.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Help overlay centered at row 0, col 16
Terminal: 80x30, Box: 47x33

                
                  ╔═══════════════════════════════════════════╗
                  ║          AGR Native Player Help           ║
                  ╠═══════════════════════════════════════════╣
                  ║                                           ║
                  ║  Playback                                 ║
                  ║    Space      Pause / Resume              ║
                  ║    <-/->      Seek +/-5s                  ║
                  ║    Shift+<-/->  Seek +/-5%                ║
                  ║    +/-        Speed up / down             ║
                  ║    Home/End   Go to start / end           ║
                  ║                                           ║
                  ║  Markers                                  ║
                  ║    m          Jump to next marker         ║
                  ║                                           ║
                  ║  Free Mode (line-by-line navigation)      ║
                  ║    f          Toggle free mode            ║
                  ║    Up/Down    Move highlight up/down      ║
                  ║    Esc        Exit free mode              ║
                  ║                                           ║
                  ║  Viewport                                 ║
                  ║    v          Toggle viewport mode        ║
                  ║    Up/Down/L/R Scroll viewport (v mode)   ║
                  ║    r          Resize to recording         ║
                  ║    Esc        Exit viewport mode          ║
                  ║                                           ║
                  ║  General                                  ║
                  ║    ?          Show this help              ║
                  ║    q          Quit player                 ║
                  ║                                           ║
                  ║         Press any key to close            ║
                  ╚═══════════════════════════════════════════╝
