tests/integration/snapshots/player/integration__snapshot_player_test__progress_bar_at_end.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 01:40/01:40
